Add possibility to define Document Root on domain creation

--- a/apache-skeleton.conf
+++ b/apache-skeleton.conf
@@ -3,14 +3,14 @@
   ServerName  _DOMAIN_._TLD_
   ServerAlias www._DOMAIN_._TLD_
 
-  DocumentRoot /var/www/_DOMAIN_._TLD_
+  DocumentRoot _DOCUMENT_ROOT_
   DirectoryIndex index.php index.html
 
   LogLevel Error
   ErrorLog /var/log/apache2/_DOMAIN_-error.log
   CustomLog /var/log/apache2/_DOMAIN_-access.log Combined
 
-  <Directory /var/www/_DOMAIN_._TLD_>
+  <Directory _DOCUMENT_ROOT_>
     AllowOverride all
   </Directory>
 
